fix(select): bulletproof isOptionShape, z-index

--- a/packages/select/src/components/base-select/index.module.css
+++ b/packages/select/src/components/base-select/index.module.css
@@ -15,6 +15,10 @@
     border: none;
     background: transparent;
     border-radius: 0;
+    position: relative;
+
+    /* TODO: перейти на систему */
+    z-index: 9999;
 }
 
 .optionsList {
